# ft_linear_regression

./: .gitignore  README.md  docker-compose.yml
docker/: dockerfile
docker/scripts/: .p10k.zsh  .zshrc  start.sh
project/: README.md  bonus.py  estimatePrice.py  pyproject.toml  training.py  view.ipynb
project/src/: __init__.py  ft_linear_regression.py  model.py  view.ipynb
project/tests/: test_fit_model.py  test_model.py  test_predict_model.py  test_utils_methods.py
