[project]
name = "project"
version = "1.0.0"
description = "Realização do projeto ft_linear_regression da especialização em Machine Learning da 42"
authors = [
    {name = "Everton Vaz",email = "egeraldo@student.42sp.org.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -s -x --cov=src"
estimate = "python estimatePrice.py"
train = "python training.py"
bonus = "python bonus.py"
